..F....... [ZBXNEXT-2073] updated jQuery to latest 1.10.2 (Eduard)
...G...PS. [ZBXNEXT-453] added a new parameter 'User' to daemon configuration that allows dropping privileges to the specified user (Juris)
....I...S. [ZBXNEXT-581] split database upgrade patches over multiple files for easier maintenance (wiper)
A......... [ZBX-7345] removed deprecated API features (Pavels)

Bug fixes:
..F....... [ZBX-7749] fixed possibility to set up database with default setting "Autocommit OFF" (Ivo)
........S. [ZBX-7140] fixed sql query to retrieve data for host updates sorted from the database (Juris)
...G...... [ZBX-7673] removed strict necessity for a configuration for options that don't require it (Juris)
..F....... [ZBX-7786] fixed cell limit formating with ellipsis (Eduard)
..F....... [ZBX-7727] added SQL connection errors displaying for Oracle and DB2 (Oleg)
....I..... [ZBX-5789] removed unused fields in graph_discovery table (Sasha)
..F....... [ZBX-6350] fixed incorrectly displayed table cell width in Event source details and Event details blocks (Ivo)
..F....... [ZBX-7095] fixed dashboard filter name to show pointer cursor (Ivo)
..F....... [ZBX-7773] fixed jquery buttonset initializing (Eduard)
..F....... [ZBX-7707] fixed "Auto-logout" field to show submitted incorrect value (Ivo)
A.F.I..... [ZBXNEXT-2124] implemented an application filter for host and host group map elements (Pavels)
....I..... [ZBX-7109] removed unused fields in trigger_discovery table (Sasha)
....I..... [ZBX-7168] fixed configure.ac template to properly link libcurl to all components independently (Juris)
A......... [ZBX-4772] fixed possibility to pass incorrect host status value (Ivo)
..F....... [ZBX-7631] fixed dashboard favourite widget width (Eduard)
....I..... [ZBX-7622] changed the default value of timeperiods.every field to '1' (wiper)
...G...PS. [ZBX-7618] removed partial matching for long format command line options (Juris)