@@ -155,7 +155,6 @@ static size_t	__zbx_json_stringsize(const char *string, zbx_json_type_t type)
 		{
 			case '"':  /* quotation mark */
 			case '\\': /* reverse solidus */
-			case '/':  /* solidus */
 			case '\b': /* backspace */
 			case '\f': /* formfeed */
 			case '\n': /* newline */
@@ -196,10 +195,6 @@ static char	*__zbx_json_insstring(char *p, const char *string, zbx_json_type_t t
 			case '\\':		/* reverse solidus */
 				*p++ = '\\';
 				*p++ = '\\';
-				break;
-			case '/':		/* solidus */
-				*p++ = '\\';
-				*p++ = '/';
 				break;
 			case '\b':		/* backspace */
 				*p++ = '\\';
@@ -246,16 +241,11 @@ static void	__zbx_json_addobject(struct zbx_json *j, const char *name, int objec
 {
 	size_t	len = 2; /* brackets */
 	char	*p, *psrc, *pdst;
-	int	i;
 
 	assert(j);
 
 	if (ZBX_JSON_COMMA == j->status)
 		len++; /* , */
-
-	if (0 != j->level)
-		len++;
-	len += j->level;
 
 	if (NULL != name)
 	{
@@ -274,11 +264,6 @@ static void	__zbx_json_addobject(struct zbx_json *j, const char *name, int objec
 
 	if (ZBX_JSON_COMMA == j->status)
 		*p++ = ',';
-
-	if (0 != j->level)
-		*p++ = '\n';
-	for (i = 0; i < j->level; i++)
-		*p++ = '\t';
 
 	if (NULL != name)
 	{
@@ -309,7 +294,6 @@ void	zbx_json_addstring(struct zbx_json *j, const char *name, const char *string
 {
 	size_t	len = 0;
 	char	*p, *psrc, *pdst;
-	int	i;
 
 	assert(j);
 
@@ -318,7 +302,6 @@ void	zbx_json_addstring(struct zbx_json *j, const char *name, const char *string
 
 	if (NULL != name)
 	{
-		len += 1 + j->level;
 		len += __zbx_json_stringsize(name, ZBX_JSON_TYPE_STRING);
 		len += 1; /* : */
 	}
@@ -338,9 +321,6 @@ void	zbx_json_addstring(struct zbx_json *j, const char *name, const char *string
 
 	if (NULL != name)
 	{
-		*p++ = '\n';
-		for (i = 0; i < j->level; i++)
-			*p++ = '\t';
 		p = __zbx_json_insstring(p, name, ZBX_JSON_TYPE_STRING);
 		*p++ = ':';
 	}
@@ -581,7 +561,7 @@ static size_t	zbx_json_string_size(const char *p)
 	if ('"' != *p)
 		return (size_t)(-1);
 
-	while (*p != '\0')	/* this should never happen */
+	while ('\0' != *p)	/* this should never happen */
 	{
 		if (*p == '"')
 		{
@@ -591,28 +571,9 @@ static size_t	zbx_json_string_size(const char *p)
 		}
 		else if (state == 1)
 		{
-			if (*p == '\\')
-			{
-				switch (*++p)
-				{
-					case 'u':
-						p += 2;
-					case '"':
-					case '\\':
-					case '/':
-					case 'b':
-					case 'f':
-					case 'n':
-					case 'r':
-					case 't':
-						sz++;
-						break;
-					default:
-						THIS_SHOULD_NEVER_HAPPEN;
-				}
-			}
-			else
-				sz++;
+			if (*p == '\\' && 'u' == *++p)
+				p += 4;
+			sz++;
 		}
 		p++;
 	}
@@ -646,11 +607,6 @@ static const char	*zbx_json_decodestring(const char *p, char *string, size_t len
 			{
 				switch (*++p)
 				{
-					case '"':
-					case '\\':
-					case '/':
-						*o++ = *p;
-						break;
 					case 'b':
 						*o++ = '\b';
 						break;
@@ -673,7 +629,7 @@ static const char	*zbx_json_decodestring(const char *p, char *string, size_t len
 						*o++ = (char)c;
 						break;
 					default:
-						THIS_SHOULD_NEVER_HAPPEN;
+						*o++ = *p;
 				}
 			}
 			else
